# modern-demo

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
modern_demo/: __init__.py  __main__.py  core.py
tests/: test_core.py  test_demo.py
