[project]
name = "modern-demo"
version = "0.1.1"
description = "Demo project for modern Python tooling"
authors = [
    { name = "Jaime Porras", email = "jaime.porras@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "modern_demo" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=24.0.0,<25.0.0)",
    "isort (>=5.12.0,<6.0.0)",
    "ruff (>=0.5.0,<1.0.0)"
]

# ---------------------------
# Tool Configurations
# ---------------------------

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F"]   # pyflakes + pycodestyle checks
ignore = []           # add rules here if you want to silence them
